--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    debugImplementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
+
 
     //Splash API
     implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
@@ -85,6 +87,21 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.44"
     kapt 'androidx.hilt:hilt-compiler:1.1.0'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    implementation"org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
+    implementation"org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+// Retrofit for API requests
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+// OkHttp for logging and network interceptors
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+
+    //Paging 3
+    def paging_version = "3.1.1"
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.paging:paging-compose:3.2.0-rc01"
+
 
 
 
