--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,15 @@ buildscript {
     ext {
         compose_version = '1.1.0'
         accompanist_version = '0.24.2-alpha'
+        kotlin_version = '1.9.22'
     }
     dependencies {
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.40.2"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.50"
     }
 }
 plugins {
-    id 'com.android.application' version '8.0.2' apply false
-    id 'com.android.library' version '8.0.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'com.android.application' version '8.2.2' apply false
+    id 'com.android.library' version '8.2.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
